--- a/CSS/main.css
+++ b/CSS/main.css
@@ -113,7 +113,7 @@ h2 {
 .marked_x,
 .marked_circle {
   color: #2c2929;
-  background-color: #fff;
+  background-color: antiquewhite;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 80%;
