--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -117,3 +117,8 @@ h2 {
 .marked_circle {
   background-image: url(../img/circle.svg);
 }
+
+.result {
+  font-size: 1.5rem;
+  margin-bottom: 15px;
+}
