--- a/CSS/main.css
+++ b/CSS/main.css
@@ -131,4 +131,9 @@ h2 {
 
 .marked_circle {
   background-image: url(../img/circle.svg);
+}
+
+.result {
+  font-size: 1.5rem;
+  margin-bottom: 15px;
 }/*# sourceMappingURL=main.css.map */
